# lab

./: .bazelignore  .bazelproject  .bazelrc  .envrc  .eslintrc.js  .eslintrc.json  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  AGENTS.md  BUILD.bazel  LICENSE  MODULE.bazel  README.md  REPO.bazel  WORKSPACE  WORKSPACE.bazel  angular.json  cypress.config.ts  docker-compose.yml  eslint.config.mjs  index.html  maven_install.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsconfig.angular.json  tsconfig.base.json  tsconfig.json  tsconfig.node.json  tsconfig.react.json
apps/app_template/src/: App.tsx  BUILD.bazel  Router.tsx
apps/app_template/src/pages/: Home.page.tsx
apps/app_template/src/test/: BUILD.bazel  index.ts  render.tsx
apps/cra/: BUILD.bazel  README.md  build_smoke_test.js  build_smoke_test.mjs  codegen.ts  jest.config.js  package.json  pnpm-lock.yaml
apps/cra/public/: BUILD.bazel
apps/cra/src/: BUILD.bazel
apps/cra/src/__generated__/: BUILD.bazel
apps/cra/src/app/: App.tsx  BUILD.bazel
apps/cra/src/tasks/: BUILD.bazel  index.ts
apps/cra/src/tic_tac_toe/: BUILD.bazel  Board.tsx  Game.tsx
apps/create-react-app/: BUILD.bazel  README.md  package-lock.json  package.json
apps/create-react-app/src/: App.tsx  BUILD.bazel
apps/full/e2e/: BUILD.bazel  autojournal.cy.ts  cypress.config.ts  routing.cy.ts  runner.ts
apps/journal_app/: BUILD.bazel  README.md  codegen.ts  index.html  package.json  tsconfig.json  vite.config.ts
apps/journal_app/src/: App.tsx  BUILD.bazel
apps/journal_app/src/__generated__/: BUILD.bazel
apps/journal_app/src/entries/: BUILD.bazel  EntriesPage.tsx  Timeline.tsx  index.ts
apps/mops_app/: BUILD.bazel  README.md  codegen.ts  default.conf.template  docker-compose.yaml  index.html  package.json  vite.config.ts
apps/mops_app/public/: BUILD.bazel
apps/mops_app/src/: App.tsx  BUILD.bazel  ClientConfiguration.gql  Router.tsx  theme.ts
apps/mops_app/src/__generated__/: BUILD.bazel
apps/mops_app/src/providers/: StatsigProvider.tsx
apps/mops_app/src/test/: BUILD.bazel  render.tsx  setup.ts
apps/tasklist/: BUILD.bazel  README.md  codegen.ts  package.json  vite.config.ts
apps/tasklist/public/: BUILD.bazel  index.html  manifest.json
apps/tasklist/src/: BUILD.bazel  index.tsx
apps/tasklist/src/__generated__/: BUILD.bazel
apps/tasklist/src/app/: App.tsx  BUILD.bazel
apps/tasklist/src/tasks/: AddTask.gql  AddTask.tsx  BUILD.bazel  DisplayTasks.tsx  GetTasks.gql  TasksPage.tsx
contexts/task/: BUILD.bazel
contexts/task/src/main/: BUILD.bazel
infra/local/: BUILD.bazel  docker-compose.yml  docker_compose.bash  router.conf  supergraph-config.yaml  supergraph.graphql
infra/local/proxy/: BUILD.bazel  default.conf.template  nginx.conf
infra/local/router/config/: router.conf
infra/local/router/schema/: supergraph-config.yaml  supergraph.graphql
learn/cra/: BUILD.bazel  README.md  build_smoke_test.mjs  package.json
learn/cra/public/: BUILD.bazel
learn/cra/src/: BUILD.bazel
learn/cra/src/app/: App.tsx  BUILD.bazel
learn/cra/src/tic_tac_toe/: BUILD.bazel  Board.tsx  Game.tsx  Square.tsx  styles.css
learn/cypress/cli_test/: BUILD.bazel  cypress.config.ts  tsconfig.json
learn/cypress/module_test/: BUILD.bazel  cypress.config.js  cypress.config.ts  module_test.cy.js  module_test.cy.ts  runner.js  runner.ts
learn/rules_jest/antd/: BUILD.bazel  Button.tsx
learn/rules_jest/simple/: BUILD.bazel  index.test.js
learn/vite/: BUILD.bazel  README.md  index.html  package.json
learn/vite/src/: App.tsx  BUILD.bazel
libs/bubbles/: BUILD.bazel  README.md  package.json  tsconfig.json  vite.config.ts
libs/bubbles/.storybook/: main.ts  preview.tsx
libs/bubbles/src/: BUILD.bazel  index.ts  tsconfig.stories.json
projects/app_template/: BUILD.bazel  package.json
projects/app_template/public/: BUILD.bazel
projects/app_template/src/: BUILD.bazel  Router.tsx
projects/mops/: BUILD.bazel  README.md
projects/mops/adk_agent/: README.md
projects/mops/app/: BUILD.bazel  codegen.ts  package.json  vite.config.ts
projects/mops/app/src/: App.tsx  (+3 more)
projects/mops/eval/: BUILD.bazel  eval_gen_prompt.txt  questions.md
projects/mops/mops_agent/: README.md
projects/mops/mops_app/: BUILD.bazel  codegen.ts  package.json  vite.config.ts
projects/mops/mops_assistant/: BUILD.bazel  codegen.ts
projects/mops/mops_service/: BUILD.bazel
projects/mops/service/: BUILD.bazel
projects/organizer/: BUILD.bazel  README.md
projects/organizer/autojournal/: BUILD.bazel
projects/organizer/e2e/: BUILD.bazel  routing.cy.ts  runner.ts
projects/organizer/journal/: BUILD.bazel
projects/organizer/journal_app/: BUILD.bazel  README.md  codegen.ts  index.html  package.json  vite.config.ts
projects/organizer/task/: BUILD.bazel
projects/organizer/tasklist/: BUILD.bazel  README.md  codegen.ts  index.html  package.json  vite.config.ts
services/mops_assistant/: BUILD.bazel  codegen.ts
services/mops_assistant/src/: AddLineItem.gql  AllLineItems.gql  BUILD.bazel  assistant.ts  line-items.ts  main.ts  server.ts
tools/: BUILD.bazel  preset.bazelrc  tools.lock.json
tools/bazel/: bazel_deps.bzl  deliver_all.sh  deliver_changed.sh  fe.bzl  java.bzl  js.bzl  output_workspace_status.sh  pkg.bzl  react.bzl  ts.bzl
tools/bazel/dgs/: BUILD.bazel  codegen.bzl
tools/bazel/jest/: BUILD.bazel  jest.config.js
tools/bazel/oci/: BUILD.bazel  check_then_push.sh  defs.bzl  push_if_not_exists.bzl  push_if_not_exists.sh.tpl
tools/bazel/storybook/: BUILD.bazel  storybook.bzl
tools/bazel/vite/: BUILD.bazel  vite.bzl
tools/bazel/vitest/: BUILD.bazel  coverage_runner.sh  setup.ts  test-utils.ts  vite.config.ts  vitest.bzl
tools/bdd/: BUILD.bazel  README.md
tools/ci/: renovate_repin.sh
tools/cypress/: update_integrity.sh
tools/jest/: BUILD.bazel  jest.config.js
tools/schematics/: BUILD.bazel  README.md  collection.json  package.json
tools/schematics/application/: index.spec.ts  index.ts
tools/schematics/hello-world/: index.spec.ts  index.ts
tools/schematics/hello_world/: index.spec.ts
(+1966 files in other folders)
