load("@npm//:defs.bzl", "npm_link_all_packages")
load("//tools/bazel:ts.bzl", "ts_config")
load("@npm//:tsconfig-to-swcconfig/package_json.bzl", tsconfig_to_swcconfig = "bin")

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = [":__subpackages__"],
    deps = [":tsconfig_base"],
)

ts_config(
    name = "tsconfig_base",
    src = "tsconfig.base.json",
    visibility = [":__subpackages__"],
)

tsconfig_to_swcconfig.t2s(
    name = "write_swcrc",
    srcs = ["tsconfig.base.json"],
    args = [
        "--filename",
        "$(location tsconfig.base.json)",
    ],
    stdout = ".swcrc",
    visibility = [":__subpackages__"],
)

ts_config(
    name = "tsconfig_react",
    src = "tsconfig.react.json",
    visibility = [":__subpackages__"],
    deps = [":tsconfig_base"],
)

tsconfig_to_swcconfig.t2s(
    name = "write_swcrc_react",
    srcs = [
        "tsconfig.base.json",
        "tsconfig.react.json",
    ],
    args = [
        "--filename",
        "$(location tsconfig.react.json)",
    ],
    stdout = ".swcrc.react",
    visibility = [":__subpackages__"],
)

ts_config(
    name = "tsconfig_node",
    src = "tsconfig.node.json",
    visibility = [":__subpackages__"],
    deps = [":tsconfig_base"],
)

tsconfig_to_swcconfig.t2s(
    name = "write_swcrc_node",
    srcs = [
        "tsconfig.base.json",
        "tsconfig.node.json",
    ],
    args = [
        "--filename",
        "$(location tsconfig.node.json)",
    ],
    stdout = ".swcrc.node",
    visibility = [":__subpackages__"],
)
