module(name = "lab")

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "35.0")
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "7.0")
bazel_dep(name = "contrib_rules_jvm", version = "0.33.0")
bazel_dep(name = "rules_nodejs", version = "6.7.4")
bazel_dep(name = "aspect_rules_js", version = "3.1.2")
bazel_dep(name = "aspect_rules_ts", version = "3.8.10")
bazel_dep(name = "aspect_rules_swc", version = "2.7.2")
bazel_dep(name = "aspect_rules_cypress", version = "0.7.2")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_multirun", version = "0.13.0")
bazel_dep(name = "rules_spring", version = "2.6.3")
bazel_dep(name = "rules_multitool", version = "1.11.1")
bazel_dep(name = "bazel_env.bzl", version = "0.7.2")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:tools.lock.json")
use_repo(multitool, "multitool")

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
    name = "opentelemetry-javaagent",
    sha256 = "b23e5ab7f5fb4f58826c6d2c31ea637825c7190652a9d47d86692e37e615a0d5",
    url = "https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/download/v2.23.0/opentelemetry-javaagent.jar",
)

####################################################################################################
# aspect_bazel_lib setup
####################################################################################################

bazel_lib_toolchains = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
use_repo(bazel_lib_toolchains, "jq_toolchains")

####################################################################################################
# maven setup
####################################################################################################

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

# Maven lock file will need to be updated whenever the artifacts or repositories change.
# See: https://github.com/bazelbuild/rules_jvm_external#requiring-lock-file-repinning-when-the-list-of-artifacts-changes
# To re-pin everything, run:
# REPIN=1 bazel run @maven//:pin
maven.install(
    artifacts = [
        "com.fasterxml.jackson.core:jackson-databind",
        "com.h2database:h2",
        "com.mysql:mysql-connector-j",
        "org.apache.commons:commons-lang3",
        "org.apache.kafka:kafka-clients",
        "org.apache.kafka:kafka-metadata",
        "org.apache.kafka:kafka-raft",
        "org.apache.kafka:kafka-server-common",
        "org.apache.kafka:kafka-storage",
        "org.apache.kafka:kafka-storage-api",
        "org.apache.kafka:kafka-streams",
        "org.apache.kafka:kafka-streams-test-utils",
        "org.apache.kafka:kafka_2.13",
        "org.eclipse.jetty:jetty-reactive-httpclient",
        "org.flywaydb:flyway-core",
        "org.springframework.ai:spring-ai-starter-mcp-server-webmvc",
        "org.springframework.ai:spring-ai-starter-model-google-genai",
        "org.springframework.ai:spring-ai-starter-model-ollama",
        "org.springframework.ai:spring-ai-starter-model-openai",
        "org.springframework.boot:spring-boot-loader",
        "org.springframework.boot:spring-boot-starter-actuator",
        "org.springframework.boot:spring-boot-starter-jdbc",
        "org.springframework.boot:spring-boot-starter-security",
        "org.springframework.boot:spring-boot-starter-validation",
        "org.springframework.boot:spring-boot-starter-web",
        "org.springframework.boot:spring-boot-starter-webflux",
        "org.springframework.data:spring-data-jdbc",
        "org.springframework.kafka:spring-kafka",
        "redis.clients:jedis",
        "org.postgresql:postgresql",
        "org.springframework.boot:spring-boot-starter-test",
        "org.springframework.kafka:spring-kafka-test",
        "org.testcontainers:testcontainers",
        "org.testcontainers:junit-jupiter",
        "org.testcontainers:kafka",
        "org.testcontainers:postgresql",
        "org.junit.platform:junit-platform-launcher",
        "org.junit.platform:junit-platform-reporting",
        "com.netflix.graphql.dgs:dgs-starter",
        "com.netflix.graphql.dgs:dgs-starter-test",
        "com.netflix.graphql.dgs:graphql-dgs-extended-scalars",
        "jakarta.servlet:jakarta.servlet-api",
        "io.confluent:kafka-protobuf-serializer:8.2.1",
        "org.wiremock:wiremock-jetty12:3.13.2",
        "com.netflix.graphql.dgs.codegen:graphql-dgs-codegen-core:8.3.0",
        "com.github.ajalt.clikt:clikt-jvm:4.4.0",  # explicitly depend on the jvm version rather than the kotlin one linked from com.netflix.graphql.dgs.codegen:graphql-dgs-codegen-core
        "com.squareup.okhttp3:okhttp-jvm:5.3.2",
    ],
    boms = [
        "org.springframework.boot:spring-boot-dependencies:3.5.11",
        "org.springframework.ai:spring-ai-bom:1.1.2",
        "com.netflix.graphql.dgs:graphql-dgs-platform-dependencies:10.2.4",
        "com.google.protobuf:protobuf-bom:4.35.0",
    ],
    fail_if_repin_required = True,
    fetch_sources = True,
    known_contributing_modules = ["protobuf"],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://packages.confluent.io/maven",
    ],
)
maven.override(
    # bazel resolves kotlin artifact rather than jvm one which doesn't contain expected classes for gql codegen
    coordinates = "com.github.ajalt.clikt:clikt",
    target = "@maven//:com_github_ajalt_clikt_clikt_jvm",
)
use_repo(
    maven,
    "maven",
)

####################################################################################################
# rules_nodejs setup
####################################################################################################

node = use_extension(
    "@rules_nodejs//nodejs:extensions.bzl",
    "node",
    dev_dependency = True,
)
node.toolchain(node_version = "24.13.0")  # keep compatible with package.json engines

####################################################################################################
# aspect_rules_js setup
####################################################################################################

npm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "npm",
    dev_dependency = True,
)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
pnpm.pnpm(
    pnpm_version = "11.3.0",
)

# Allows developers to use the matching pnpm version, for example:
# bazel run -- @pnpm --dir /home/runner/work/rules_js/rules_js install
use_repo(pnpm, "pnpm")

####################################################################################################
# aspect_rules_ts setup
####################################################################################################

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps(
    ts_version_from = "//:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")

####################################################################################################
# rules_cypress setup
####################################################################################################

cypress = use_extension(
    "@aspect_rules_cypress//cypress:extensions.bzl",
    "cypress",
    dev_dependency = True,
)
cypress.toolchain(
    # Generate with: bazel run @aspect_rules_cypress//scripts:mirror_releases <VERSION_NUMBER>
    cypress_integrity = {
        "darwin-x64": "959ea5ab54592689fcfbbd12f530258dcaadcf9c952b946ed6be662b36ce43e7",
        "darwin-arm64": "4a54a623664eecb5b6eb553718d9e6dc33bfef21e713fd33c703521d0a66dc9e",
        "linux-x64": "7a415af513bcbc2712121947587c3bfeec082e67d24b8a321622565389169507",
        "linux-arm64": "f4e42449ec02b4f4e141c239b61f43f0415e9630febf4ca9a147cd6233e1f4b6",
        "win32-x64": "19e619807aa24ec1acef65147de70cce2c71aa134442cd76123885ccf1ab3280",
    },
    cypress_version = "15.15.0",
)
use_repo(cypress, "cypress_toolchains")

register_toolchains("@cypress_toolchains//:all")

####################################################################################################
# rules_oci setup
####################################################################################################

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_java",
    digest = "sha256:0210d5b77dfbe851916184405ddfc8297e7bc652029f7a485274cb71ea2462bc",
    image = "gcr.io/distroless/java17-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
oci.pull(
    name = "nginx_alpine_slim",
    image = "nginx",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    reproducible = False,
    tag = "stable-alpine-slim",
)
oci.pull(
    name = "debian",
    digest = "sha256:4ae67669760b807c19f23902a3fd7c121a6a70cf2ae709035674b23e712e4d62",
    image = "debian",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
oci.toolchains(name = "lab_oci")
use_repo(oci, "debian", "debian_linux_amd64", "debian_linux_arm64_v8", "distroless_java", "distroless_java_linux_amd64", "distroless_java_linux_arm64_v8", "lab_oci_crane_toolchains", "lab_oci_regctl_toolchains", "nginx_alpine_slim", "nginx_alpine_slim_linux_amd64", "nginx_alpine_slim_linux_arm64_v8")
