module(name = "lab")

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "35.0")
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_jvm_external", version = "7.0")
bazel_dep(name = "contrib_rules_jvm", version = "0.33.0")
bazel_dep(name = "rules_nodejs", version = "6.7.4")
bazel_dep(name = "aspect_rules_js", version = "3.2.2")
bazel_dep(name = "aspect_rules_ts", version = "3.8.11")
bazel_dep(name = "aspect_rules_swc", version = "2.7.2")
bazel_dep(name = "aspect_rules_cypress", version = "0.7.2")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_multirun", version = "0.14.0")
bazel_dep(name = "rules_spring", version = "2.6.3")
bazel_dep(name = "rules_multitool", version = "1.11.1")
bazel_dep(name = "bazel_env.bzl", version = "0.7.2")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:tools.lock.json")
use_repo(multitool, "multitool")

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
    name = "opentelemetry-javaagent",
    sha256 = "b23e5ab7f5fb4f58826c6d2c31ea637825c7190652a9d47d86692e37e615a0d5",
    url = "https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/download/v2.23.0/opentelemetry-javaagent.jar",
)

####################################################################################################
# aspect_bazel_lib setup
####################################################################################################

bazel_lib_toolchains = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
use_repo(bazel_lib_toolchains, "jq_toolchains")

####################################################################################################
# maven setup
####################################################################################################

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

# Maven lock file will need to be updated whenever the artifacts or repositories change.
# See: https://github.com/bazelbuild/rules_jvm_external#requiring-lock-file-repinning-when-the-list-of-artifacts-changes
# To re-pin everything, run:
# REPIN=1 bazel run @maven//:pin
maven.install(
    artifacts = [
        "com.fasterxml.jackson.module:jackson-module-parameter-names",  # DGS client directly registers this Jackson 2 module; remove when DGS no longer needs it.
        "com.h2database:h2",
        "com.jayway.jsonpath:json-path:3.0.0",
        "com.mysql:mysql-connector-j",
        "org.apache.commons:commons-lang3",
        "org.apache.kafka:kafka-clients",
        "org.apache.kafka:kafka-metadata",
        "org.apache.kafka:kafka-raft",
        "org.apache.kafka:kafka-server-common",
        "org.apache.kafka:kafka-storage",
        "org.apache.kafka:kafka-storage-api",
        "org.apache.kafka:kafka-streams",
        "org.apache.kafka:kafka-streams-test-utils",
        "org.apache.kafka:kafka_2.13",
        "org.eclipse.jetty:jetty-reactive-httpclient",
        "org.springframework.boot:spring-boot-starter-flyway",
        "org.springframework.ai:spring-ai-starter-mcp-server-webmvc",
        "org.springframework.ai:spring-ai-starter-model-google-genai",
        "org.springframework.ai:spring-ai-starter-model-ollama",
        "org.springframework.ai:spring-ai-starter-model-openai",
        "org.springframework.boot:spring-boot-loader",
        "org.springframework.boot:spring-boot-starter-actuator",
        "org.springframework.boot:spring-boot-starter-data-jdbc",
        "org.springframework.boot:spring-boot-starter-kafka",
        "org.springframework.boot:spring-boot-starter-security",
        "org.springframework.boot:spring-boot-starter-validation",
        "org.springframework.boot:spring-boot-starter-web",
        "org.springframework.boot:spring-boot-starter-webflux",
        "redis.clients:jedis",
        "org.postgresql:postgresql:42.7.11",
        "org.springframework.boot:spring-boot-starter-test",
        "org.springframework.kafka:spring-kafka-test",
        "org.testcontainers:testcontainers",
        "org.testcontainers:testcontainers-jdbc",
        "org.testcontainers:testcontainers-junit-jupiter",
        "org.testcontainers:testcontainers-kafka",
        "org.testcontainers:testcontainers-postgresql",
        "org.junit.platform:junit-platform-launcher",
        "org.junit.platform:junit-platform-reporting",
        "com.netflix.graphql.dgs:dgs-starter",
        "com.netflix.graphql.dgs:dgs-starter-test",
        "com.netflix.graphql.dgs:graphql-dgs-extended-scalars",
        "jakarta.servlet:jakarta.servlet-api",
        "io.confluent:kafka-protobuf-serializer:8.2.1",
        "com.netflix.graphql.dgs.codegen:graphql-dgs-codegen-core:8.5.0",
        "com.github.ajalt.clikt:clikt-jvm:4.4.0",  # explicitly depend on the jvm version rather than the kotlin one linked from com.netflix.graphql.dgs.codegen:graphql-dgs-codegen-core
        "com.squareup.okhttp3:okhttp-jvm:5.4.0",
        "org.apache.tomcat.embed:tomcat-embed-core:11.0.22",
        "org.apache.tomcat.embed:tomcat-embed-el:11.0.22",
        "org.apache.tomcat.embed:tomcat-embed-websocket:11.0.22",
    ],
    boms = [
        # First wins
        "io.netty:netty-bom:4.2.15.Final",
        "com.google.protobuf:protobuf-bom:4.35.0",
        "org.springframework.boot:spring-boot-dependencies:4.1.0",
        "org.springframework.ai:spring-ai-bom:2.0.0",
        "com.netflix.graphql.dgs:graphql-dgs-platform-dependencies:12.0.1",
        "org.testcontainers:testcontainers-bom:2.0.5",
    ],
    fail_if_repin_required = True,
    fetch_sources = True,
    known_contributing_modules = ["protobuf"],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://packages.confluent.io/maven",
    ],
)
maven.override(
    # bazel resolves kotlin artifact rather than jvm one which doesn't contain expected classes for gql codegen
    coordinates = "com.github.ajalt.clikt:clikt",
    target = "@maven//:com_github_ajalt_clikt_clikt_jvm",
)
use_repo(
    maven,
    "maven",
)

####################################################################################################
# rules_nodejs setup
####################################################################################################

node = use_extension(
    "@rules_nodejs//nodejs:extensions.bzl",
    "node",
    dev_dependency = True,
)
node.toolchain(
    node_repositories = {
        "24.15.0-darwin_arm64": [
            "node-v24.15.0-darwin-arm64.tar.gz",
            "node-v24.15.0-darwin-arm64",
            "372331b969779ab5d15b949884fc6eaf88d5afe87bde8ba881d6400b9100ffc4",
        ],
        "24.15.0-darwin_amd64": [
            "node-v24.15.0-darwin-x64.tar.gz",
            "node-v24.15.0-darwin-x64",
            "ffd5ee293467927f3ee731a553eb88fd1f48cf74eebc2d74a6babe4af228673b",
        ],
        "24.15.0-linux_arm64": [
            "node-v24.15.0-linux-arm64.tar.xz",
            "node-v24.15.0-linux-arm64",
            "f3d5a797b5d210ce8e2cb265544c8e482eaedcb8aa409a8b46da7e8595d0dda0",
        ],
        "24.15.0-linux_ppc64le": [
            "node-v24.15.0-linux-ppc64le.tar.xz",
            "node-v24.15.0-linux-ppc64le",
            "6a6560a27bd2817013c28c3d917bfe9eebf26bbd4b1d88475190f216cc411fbb",
        ],
        "24.15.0-linux_s390x": [
            "node-v24.15.0-linux-s390x.tar.xz",
            "node-v24.15.0-linux-s390x",
            "940d4cbfadf736b34519630a05d144c09f8a5aca291a802f2f559ee1562f6f24",
        ],
        "24.15.0-linux_amd64": [
            "node-v24.15.0-linux-x64.tar.xz",
            "node-v24.15.0-linux-x64",
            "472655581fb851559730c48763e0c9d3bc25975c59d518003fc0849d3e4ba0f6",
        ],
        "24.15.0-windows_arm64": [
            "node-v24.15.0-win-arm64.zip",
            "node-v24.15.0-win-arm64",
            "c9eb7402eda26e2ba7e44b6727fc85a8de56c5095b1f71ebd3062892211aa116",
        ],
        "24.15.0-windows_amd64": [
            "node-v24.15.0-win-x64.zip",
            "node-v24.15.0-win-x64",
            "cc5149eabd53779ce1e7bdc5401643622d0c7e6800ade18928a767e940bb0e62",
        ],
    },
    node_version = "24.15.0",  # keep compatible with package.json engines
)

####################################################################################################
# aspect_rules_js setup
####################################################################################################

npm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "npm",
    dev_dependency = True,
)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
pnpm.pnpm(
    pnpm_version = "11.3.0",
)

# Allows developers to use the matching pnpm version, for example:
# bazel run -- @pnpm --dir /home/runner/work/rules_js/rules_js install
use_repo(pnpm, "pnpm")

####################################################################################################
# aspect_rules_ts setup
####################################################################################################

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps(
    ts_version_from = "//:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")

####################################################################################################
# rules_cypress setup
####################################################################################################

cypress = use_extension(
    "@aspect_rules_cypress//cypress:extensions.bzl",
    "cypress",
    dev_dependency = True,
)
cypress.toolchain(
    # Generate with: aspect cypress-integrity
    cypress_integrity = {
        "darwin-x64": "e31a5ab8044908870fc5915377fff63001fbc0095e1ca55866df55c187865916",
        "darwin-arm64": "a364c48a5efc64c9deb3a9aa087cfaaacf2256860745652f6a0f3a155d7cc0a6",
        "linux-x64": "204d073a9a9214132f3c924020d27142cfe2a43c9846fb9a6bc8ae5ff0072e1f",
        "linux-arm64": "3ff7ef536eacedc54b653840e0baac0c31899c35ffac12837cc56811529a7742",
        "win32-x64": "162c8eac7ab5d352d85822fcc7948b5046e51fd151507aed85f0bb26364f334a",
    },
    cypress_version = "15.17.0",
)
use_repo(cypress, "cypress_toolchains")

register_toolchains("@cypress_toolchains//:all")

####################################################################################################
# rules_oci setup
####################################################################################################

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_java",
    digest = "sha256:3c89b72dcd8b9c3b6fc9ae42785fc5ccf58b7d540504944ee5376c91a81f0af9",
    image = "gcr.io/distroless/java17-debian13",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    tag = "latest",
)
oci.pull(
    name = "nginx_alpine_slim",
    digest = "sha256:3fe7a344f234ac4b84817896c9294ffae74eae03fc1ad0ff502457fef5cebef8",
    image = "nginx",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    tag = "alpine-slim",
)
oci.toolchains(name = "lab_oci")
use_repo(oci, "distroless_java", "distroless_java_linux_amd64", "distroless_java_linux_arm64_v8", "lab_oci_crane_toolchains", "lab_oci_regctl_toolchains", "nginx_alpine_slim", "nginx_alpine_slim_linux_amd64", "nginx_alpine_slim_linux_arm64_v8")
