load("@multitool//:tools.bzl", MULTITOOL_TOOLS = "TOOLS")
load("@bazel_env.bzl", "bazel_env")
load("@bazelrc-preset.bzl", "bazelrc_preset")

bazelrc_preset(
    name = "preset",
    doc_link_template = "https://registry.build/flag/bazel?filter={flag}",
)

bazel_env(
    name = "bazel_env",
    toolchains = {
        "jdk": "@rules_java//toolchains:current_host_java_runtime",
    },
    tools = {
        "jar": "$(JAVABASE)/bin/jar",
        "java": "$(JAVA)",
        "pnpm": "@pnpm",
    } | MULTITOOL_TOOLS,
)
