load("//tools/bazel/vite:vite.bzl", "vite_build", "vite_dev_server")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

SRCS = [
    "public/vite.svg",
    "index.html",
    "package.json",
    "tsconfig.json",
    "vite.config.ts",
]

DEPS = [
    "//apps/journal_app/src",
    "//:node_modules/@vitejs/plugin-react",
    "//:node_modules/react",
    "//:node_modules/react-dom",
    "//:node_modules/vite",
    "//:tsconfig_base",
    "//:tsconfig_react",
]

vite_build(
    name = "build",
    srcs = SRCS + DEPS,
)

vite_dev_server(
    name = "journal_app",
    data = SRCS + DEPS,
)

pkg_tar(
    name = "tar",
    srcs = [":build"],
    package_dir = "/usr/share/nginx/html",
    strip_prefix = "dist",
)

oci_image(
    name = "image",
    base = "@nginx_debian_slim",
    tars = [":tar"],
)

oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["lab/journal_app:latest"],
    visibility = ["//:__pkg__"],
)
